.kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pearl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pearl
  template:
    metadata:
      labels:
        app: pearl
    spec:
      containers:
        - name: pearl
          image: inseefr/pearl-jam:latest
