.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pearl
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - host
  rules:
    - host: host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name : pearl
                port:
                  number: 80
